--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.0"
+    ext.google_services_version = "4.3.4"
     repositories {
         google()
         mavenCentral()
@@ -9,6 +10,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "io.realm:realm-gradle-plugin:10.4.0"
+        classpath "com.google.gms:google-services:$google_services_version"
+        // Add the Crashlytics Gradle plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
